<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_random" >

    <LinearLayout
        android:id="@+id/_ll_cur_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_wait_cur_time"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff" />

        <DigitalClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff" />
    </LinearLayout>

    <TextView
        android:id="@+id/tx_wait_remain_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_ll_cur_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/alarm_wait_remain_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tx_wait_unlock_hint"
        android:layout_below="@+id/tx_wait_remain_time"
        android:gravity="center"
        android:orientation="vertical" >

        <com.jzj.alarm.ClockView
            android:id="@+id/clock_wait_count_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tx_wait_unlock_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tx_wait_cur_steps"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/alarm_wait_exe_to_unlock"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff" />

    <TextView
        android:id="@+id/tx_wait_cur_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/alarm_wait_cur_steps"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffffff" />

</RelativeLayout>