<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_random" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/_ll_pedometer_container"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@null"
        android:src="@drawable/pic_alarm" />

    <LinearLayout
        android:id="@+id/_ll_pedometer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tx_pedometer_hint"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp" >

            <TextView
                android:id="@+id/tx_pedometer_cur_sens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/pedometer_cur_sens"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/bn_pedometer_set_sens"
                android:layout_width="25sp"
                android:layout_height="25sp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:scaleType="centerInside"
                android:src="@drawable/ic_setting_borderless" />
        </LinearLayout>

        <TextView
            android:id="@+id/tx_pedometer_cur_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pedometer_cur_steps"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tx_pedometer_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/pedometer_help"
        android:textColor="#D0FFFFFF"
        android:textSize="18sp" />

</RelativeLayout>